# magi-claude

./: .gitignore  CLAUDE.md  Makefile  README.md  magi-review-5.1.0-diff.txt  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: MAGI-System-Documentation.md  faq-prompt-guard.md  ollama-backend.md  ollama-magi-cost-analysis.md  python-prompt-hardening-port.md
docs/adr/: 0001-no-runtime-heuristic-fallback.md
docs/sbtdd/: sanitize-spec-behavior.md
skills/magi/: SKILL.md
skills/magi/agents/: balthasar.md  caspar.md  melchior.md
skills/magi/scripts/: agent_schema.py  backend.py  backoff.py  claude_backend.py  consensus.py  cost.py  fallback_policy.py  finding_validation.py  input_size.py  lineage_identity.py  model_context.py  ollama_backend.py  ollama_config.py  ollama_init.py  ollama_preflight.py  parse_agent_output.py  prompt_guard.py  redaction.py  reporting.py  retry_feedback.py  review_context.py  run_lock.py  run_magi.py  sanitize.py  status_display.py  temp_dirs.py  validate.py  validate_magi_toml.py  verdict_markers.py
tests/: conftest.py  rotation_harness.py  test_agent_prompt_contract.py  test_agent_schema.py  test_backend.py  test_backoff.py  test_claude_backend.py  test_cost.py  test_fallback_policy.py  test_finding_validation.py  test_input_size.py  test_lineage_identity.py  test_measure_marker_adherence.py  test_model_context.py  test_ollama_backend.py  test_ollama_config.py  test_ollama_init.py  test_ollama_preflight.py  test_parse_agent_output.py  test_prompt_guard.py  test_redaction.py  test_review_context.py  test_run_lock.py  test_run_magi.py  test_sanitize.py  test_status_display.py  test_synthesize.py  test_temp_dirs.py  test_validate_magi_toml.py  test_verdict_markers.py
tests/fixtures/claude-cli-outputs/: README.md  content-block-not-first.json  content-block-shape.json  ollama-fenced-content.json  plain-string-shape.json  result-shape.json  result-with-markdown-fences.json  result-with-prose-preamble.json
tests/fixtures/ollama-outputs/: ok.json
tools/: measure_marker_adherence.py
