[project]
name = "magi"
version = "4.0.6"
requires-python = ">= 3.12"
description = "MAGI multi-perspective analysis plugin for Claude Code"
license = "MIT OR Apache-2.0"
authors = [{name = "Julian Bolivar"}]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "skills/magi/scripts"
explicit_package_bases = true
# Local developer tooling (gitignored, from BolivarTech/AI_Tools) is not held to
# the plugin's strict typecheck. Harmless in the public repo (the dir is absent).
exclude = ['^scripts/']

[[tool.mypy.overrides]]
module = "_pytest.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["tests.*", "conftest"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
disable_error_code = ["type-arg", "misc", "unused-ignore"]
