[project]
name = "magi"
version = "4.0.6"
requires-python = ">= 3.12"
description = "MAGI multi-perspective analysis plugin for Claude Code"
license = "MIT OR Apache-2.0"
authors = [{name = "Julian Bolivar"}]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "skills/magi/scripts"
explicit_package_bases = true
# Local developer tooling (gitignored, from BolivarTech/AI_Tools) is not held to
# the plugin's strict typecheck. Harmless in the public repo (the dir is absent).
exclude = ['^scripts/']

[[tool.mypy.overrides]]
module = "_pytest.*"
follow_imports = "skip"

# tests/rotation_harness.py is a sibling test-helper module. pytest's prepend
# import mode puts tests/ on sys.path so ``from rotation_harness import ...``
# resolves at runtime, but mypy indexes tests as the ``tests.*`` package and
# adding tests/ to mypy_path would duplicate the two ``conftest`` modules. Treat
# the bare import as untyped; the module itself is still checked under tests.*.
[[tool.mypy.overrides]]
module = "rotation_harness"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "conftest"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
disable_error_code = ["type-arg", "misc", "unused-ignore"]

[dependency-groups]
dev = [
    "hypothesis>=6.156.6",
]
